:recycle: Use archive in title instead of h1

--- a/content/archive.njk
+++ b/content/archive.njk
@@ -1,9 +1,8 @@
 ---
 layout: layouts/home.njk
 permalink: /posts/
+title: Archive
 ---
-
-<h1>Archive</h1>
 
 {% set postslist = collections.posts %}
 {% include "postslist.njk" %}
